--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 // Variables
 @import 'variables';
-// Bootstrap
+@import "../../node_modules/owl.carousel/dist/assets/owl.carousel.min.css"; // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 .mt-7 {
     margin-top: 7rem !important;
