--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,6 +4,7 @@
 @import 'variables';
 @import "../../node_modules/owl.carousel/dist/assets/owl.carousel.min.css"; // Bootstrap
 @import '~bootstrap-icons/font/bootstrap-icons';
+@import '~bootstrap/scss/bootstrap';
 .mt-7 {
     margin-top: 7rem !important;
 }
