--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -49,3 +49,15 @@
 .carousel-item {
     height: 650px;
 }
+
+button.owl-prev {
+    position: absolute;
+    top: 50% !important;
+    font-size: 2rem;
+}
+
+button.owl-next {
+    position: absolute;
+    top: 50% !important;
+    font-size: 2rem;
+}
