--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -61,3 +61,26 @@ button.owl-next {
     top: 50% !important;
     font-size: 2rem;
 }
+
+button.owl-next {
+    right: 0;
+}
+
+button.owl-prev {
+    left: 2px;
+}
+
+button.owl-next,
+button.owl-prev,
+button.raised {
+    background-color: #fff!important;
+    box-shadow: 0 2px .25rem 0 rgba(0, 11, 38, .2)!important;
+    color: #342c27!important;
+    height: 2rem!important;
+    min-height: 2rem!important;
+    width: 2rem!important;
+}
+
+// button.owl-next {
+//     right: 0;
+// }
