--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -63,11 +63,11 @@ button.owl-next {
 }
 
 button.owl-next {
-    right: 0;
+    right: -1;
 }
 
 button.owl-prev {
-    left: 2px;
+    left: 4px;
 }
 
 button.owl-next,
@@ -76,9 +76,10 @@ button.raised {
     background-color: #fff!important;
     box-shadow: 0 2px .25rem 0 rgba(0, 11, 38, .2)!important;
     color: #342c27!important;
-    height: 2rem!important;
+    height: 2.5rem!important;
     min-height: 2rem!important;
-    width: 2rem!important;
+    width: 2.5rem!important;
+    border-radius: 50%;
 }
 
 // button.owl-next {
