--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -63,11 +63,11 @@ button.owl-next {
 }
 
 button.owl-next {
-    right: 0;
+    right: -9px;
 }
 
 button.owl-prev {
-    left: 2px;
+    left: -8px;
 }
 
 button.owl-next,
