--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5,6 +5,129 @@
  * Licensed under: SEE LICENSE IN https://github.com/OwlCarousel2/OwlCarousel2/blob/master/LICENSE
  */
 .owl-carousel,.owl-carousel .owl-item{-webkit-tap-highlight-color:transparent;position:relative}.owl-carousel{display:none;width:100%;z-index:1}.owl-carousel .owl-stage{position:relative;touch-action:manipulation;-moz-backface-visibility:hidden}.owl-carousel .owl-stage:after{content:".";display:block;clear:both;visibility:hidden;line-height:0;height:0}.owl-carousel .owl-stage-outer{position:relative;overflow:hidden;-webkit-transform:translate3d(0,0,0)}.owl-carousel .owl-item,.owl-carousel .owl-wrapper{-webkit-backface-visibility:hidden;-moz-backface-visibility:hidden;-ms-backface-visibility:hidden;-webkit-transform:translate3d(0,0,0);-moz-transform:translate3d(0,0,0);-ms-transform:translate3d(0,0,0)}.owl-carousel .owl-item{min-height:1px;float:left;-webkit-backface-visibility:hidden;-webkit-touch-callout:none}.owl-carousel .owl-item img{display:block;width:100%}.owl-carousel .owl-dots.disabled,.owl-carousel .owl-nav.disabled{display:none}.no-js .owl-carousel,.owl-carousel.owl-loaded{display:block}.owl-carousel .owl-dot,.owl-carousel .owl-nav .owl-next,.owl-carousel .owl-nav .owl-prev{cursor:pointer;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}.owl-carousel .owl-nav button.owl-next,.owl-carousel .owl-nav button.owl-prev,.owl-carousel button.owl-dot{background:0 0;color:inherit;border:none;padding:0!important;font:inherit}.owl-carousel.owl-loading{opacity:0;display:block}.owl-carousel.owl-hidden{opacity:0}.owl-carousel.owl-refresh .owl-item{visibility:hidden}.owl-carousel.owl-drag .owl-item{touch-action:pan-y;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}.owl-carousel.owl-grab{cursor:move;cursor:-webkit-grab;cursor:grab}.owl-carousel.owl-rtl{direction:rtl}.owl-carousel.owl-rtl .owl-item{float:right}.owl-carousel .animated{-webkit-animation-duration:1s;animation-duration:1s;-webkit-animation-fill-mode:both;animation-fill-mode:both}.owl-carousel .owl-animated-in{z-index:0}.owl-carousel .owl-animated-out{z-index:1}.owl-carousel .fadeOut{-webkit-animation-name:fadeOut;animation-name:fadeOut}@-webkit-keyframes fadeOut{0%{opacity:1}100%{opacity:0}}@keyframes fadeOut{0%{opacity:1}100%{opacity:0}}.owl-height{transition:height .5s ease-in-out}.owl-carousel .owl-item .owl-lazy{opacity:0;transition:opacity .4s ease}.owl-carousel .owl-item .owl-lazy:not([src]),.owl-carousel .owl-item .owl-lazy[src^=""]{max-height:0}.owl-carousel .owl-item img.owl-lazy{transform-style:preserve-3d}.owl-carousel .owl-video-wrapper{position:relative;height:100%;background:#000}.owl-carousel .owl-video-play-icon{position:absolute;height:80px;width:80px;left:50%;top:50%;margin-left:-40px;margin-top:-40px;background:url(/images/vendor/owl.carousel/dist/owl.video.play.png?7f01b07148f205f6e8258e92bbf652d9) no-repeat;cursor:pointer;z-index:1;-webkit-backface-visibility:hidden;transition:transform .1s ease}.owl-carousel .owl-video-play-icon:hover{transform:scale(1.3,1.3)}.owl-carousel .owl-video-playing .owl-video-play-icon,.owl-carousel .owl-video-playing .owl-video-tn{display:none}.owl-carousel .owl-video-tn{opacity:0;height:100%;background-position:center center;background-repeat:no-repeat;background-size:contain;transition:opacity .4s ease}.owl-carousel .owl-video-frame{position:relative;z-index:1;height:100%;width:100%}
+@media (min-width:320px) and (max-width:600px) {
+    .fs-xs-1 {
+        font-size: calc(1.35rem + 1.2vw) !important;
+    }
+    .fs-xs-2 {
+        font-size: calc(1.305rem + 0.66vw) !important;
+    }
+    .fs-xs-3 {
+        font-size: calc(1.2825rem + 0.39vw) !important;
+    }
+    .fs-xs-4 {
+        font-size: calc(1.26rem + 0.12vw) !important;
+    }
+    .fs-xs-5 {
+        font-size: 0.7rem !important;
+    }
+    .fs-xs-6 {
+        font-size: 0.7rem !important;
+    }
+    .mt-xs-0 {
+        margin-top: 0 !important;
+    }
+    .mt-xs-1 {
+        margin-top: 0.25rem !important;
+    }
+    .mt-xs-2 {
+        margin-top: 0.5rem !important;
+    }
+    .mt-xs-3 {
+        margin-top: 1rem !important;
+    }
+    .mt-xs-4 {
+        margin-top: 1.5rem !important;
+    }
+    .mt-xs-5 {
+        margin-top: 3rem!important
+    }
+    .mt-xs-6 {
+        margin-top: 4.5rem!important;
+    }
+    .mt-xs-7 {
+        margin-top: 6rem!important
+    }
+    .mt-xs-8 {
+        margin-top: 8rem!important
+    }
+    .mt-xs-9 {
+        margin-top: 10rem!important
+    }
+    .mt-xs-10 {
+        margin-top: 12rem!important
+    }
+    .mt-xs-11 {
+        margin-top: 14rem!important
+    }
+    .mt-xs-12 {
+        margin-top: 16rem!important
+    }
+    w-xs-100 {
+        width: 100vh !important;
+    }
+}
+
+@media (min-width:480px) {
+    /* body {
+        background-color: green !important;
+    } */
+}
+
+@media (min-width:600px) {}
+
+@media (min-width:801px) {}
+
+@media (min-width:1025px) {}
+
+@media (min-width:1281px) {}
+.mt-5 {
+    margin-top: 3rem!important
+}
+
+.mt-6 {
+    margin-top: 4.5rem!important;
+}
+
+.mt-7 {
+    margin-top: 6rem!important
+}
+
+.mt-8 {
+    margin-top: 8rem!important
+}
+
+.mt-9 {
+    margin-top: 10rem!important
+}
+
+.mt-10 {
+    margin-top: 12rem!important
+}
+
+.mt-11 {
+    margin-top: 14rem!important
+}
+
+.mt-12 {
+    margin-top: 16rem!important
+}
+
+.mb-6 {
+    margin-bottom: 4.5rem !important;
+}
+
+.mb-7 {
+    margin-bottom: 6rem !important;
+}
+
+.mb-8 {
+    margin-bottom: 8rem !important;
+}
+
+.mb-9 {
+    margin-bottom: 10rem !important;
+}
 @charset "UTF-8";
 @font-face {
   font-display: block;
@@ -19296,14 +19419,6 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
-.mt-7 {
-  margin-top: 7rem !important;
-}
-
-.mt-9 {
-  margin-top: 11rem !important;
-}
-
 .form-control[readonly] {
   background-color: #fff;
 }
