--- a/public/css/app.css
+++ b/public/css/app.css
@@ -19419,6 +19419,76 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+@font-face {
+  font-family: AutofactorMedium;
+  src: url(/fonts/sohne-schmal-dreiviertelfett.woff2?d250677f3f18f4f64da7af95f520659a);
+  font-weight: bold;
+}
+.mc-theme-dark,
+:root {
+  color: #ffffff;
+  --on-theme-background: #000;
+  --on-theme-text: #fff;
+  --on-theme-text-hr-span-after: hsla(0, 0%, 100%, .3);
+  --on-theme-border-contrast: hsla(0, 0%, 100%, .5);
+  --on-theme-border-contrast-hover: #fff;
+  --on-theme-applepay-border: none;
+  --on-theme-badge-bg: #fff;
+  --on-theme-badge-text: #000;
+  --on-theme-badge-dim-bg: #272c33;
+  --on-theme-badge-dim-text: #fff;
+  --on-theme-carousel-dot: #596170;
+  --on-theme-carousel-dot-active: #fff;
+  --on-theme-carousel-arrow-bg: #272c33;
+  --on-theme-carousel-arrow-bg-hover: #31333b;
+  --on-theme-carousel-arrow: #949aa4;
+  --on-theme-carousel-arrow-hover: #fff;
+  --on-theme-dropdown-backdrop: rgba(0, 0, 0, .9);
+  --on-theme-dropdown-border: #272c33;
+  --on-theme-dropdown-bg: #191c21;
+  --on-theme-dropdown-shadow: #000;
+  --on-theme-dropdown-hover-bg: #272c33;
+  --on-theme-tooltip-bg: #272c33;
+  --on-theme-tooltip-border: #596170;
+  --on-theme-tooltip-arrow: #596170;
+  --on-theme-tooltip-arrow-after: #272c33;
+  --on-theme-checkbox-bg: #191c21;
+  --on-theme-checkbox-border: #949aa4;
+  --on-theme-checkbox-checked: #fff;
+  --on-theme-checkbox-active-border: #596170;
+  --on-theme-checkbox-focused: #949aa4;
+  --on-theme-checkbox-dis-bg: #f3f3f3;
+  --on-theme-checkbox-dis-border: #dbdde1;
+  --on-theme-checkbox-dis-active-border: #272c33;
+  --on-theme-form-bg: #191c21;
+  --on-theme-form-border: #272c33;
+  --on-theme-form-elem-color: #fff;
+  --on-theme-form-elem-placehold-color: hsla(0, 0%, 100%, .5);
+  --on-theme-form-dis-bg: #272c33;
+  --on-theme-form-dis-border: none;
+  --on-theme-form-dis-active: none;
+  --on-theme-form-dis-elem: hsla(0, 0%, 100%, .5);
+  --on-theme-form-append: hsla(0, 0%, 100%, .3);
+  --on-theme-radio-bg: #191c21;
+  --on-theme-radio-border: #272c33;
+  --on-theme-radio-checked: #fff;
+  --on-theme-radio-dis-bg: var(--mc-theme-radio-bg);
+  --on-theme-radio-dis-border: none;
+  --on-theme-select-menu-bg: #191c21;
+  --on-theme-select-menu-border: #272c33;
+}
+
+body {
+  margin: 0;
+  color: var(--bs-body-color);
+  text-align: var(--bs-body-text-align);
+  background-color: var(--on-theme-background);
+}
+
+nav {
+  background-color: var(--on-theme-background) !important;
+}
+
 .form-control[readonly] {
   background-color: #fff;
 }
