--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,11 +8,11 @@
 @import './media.css';
 @import './utilities.css';
 
-@font-face {
-    font-family: AutofactorMedium;
-    src: url(../fonts/sohne-schmal-dreiviertelfett.woff2);
-    font-weight: bold;
-}
+// @font-face {
+//     font-family: AutofactorMedium;
+//     src: url(../fonts/sohne-schmal-dreiviertelfett.woff2);
+//     font-weight: bold;
+// }
 
 
 .mc-theme-dark,
