--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -90,6 +90,10 @@ nav {
     color: #fff;
 }
 
+.carousel-caption {
+    bottom: 75.25rem;
+}
+
 .form-control[readonly] {
     background-color: #fff;
 }
