--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -94,6 +94,11 @@ nav {
     bottom: 75.25rem;
 }
 
+div#au-slider {
+    height: 650px;
+    overflow: hidden;
+}
+
 .form-control[readonly] {
     background-color: #fff;
 }
