--- a/public/css/app.css
+++ b/public/css/app.css
@@ -19511,6 +19511,10 @@ div#au-slider {
   background-color: #fff;
 }
 
+label {
+  color: #000 !important;
+}
+
 .nounderline {
   text-decoration: none !important;
 }
