--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -108,6 +108,10 @@ div#au-slider {
     background-color: #fff;
 }
 
+.form-floating>label {
+    color: #000 !important;
+}
+
 label {
     color: #000 !important;
 }
