--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -173,6 +173,11 @@ h1,
     color: #fff;
 }
 
+.content-title {
+    position: absolute;
+    bottom: 30px;
+}
+
 .section-elements .icon-box {
     display: block;
     box-shadow: 0 1px 0 0 rgb(0 0 0 / 10%);
