--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -189,6 +189,11 @@ h1,
     margin-bottom: 3rem;
 }
 
+.accordion-button {
+    background-color: #000 !important;
+    color: #ffffff !important;
+}
+
 .section-elements .icon-box i {
     font-size: 2.5rem;
     color: #0169fe;
