--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -174,10 +174,10 @@ h1,
     color: #fff;
 }
 
-.content-title {
-    position: absolute;
-    bottom: 30px;
-}
+// .content-title {
+//     position: absolute;
+//     bottom: 30px;
+// }
 
 .section-elements .icon-box {
     display: block;
