--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -198,31 +198,28 @@ h1,
     border: none !important;
 }
 
-.accordion-item {
-    border: none !important;
-    background: var(--mc-color-neutral-900);
-}
 
-
-
-.accordion-flush .accordion-item .accordion-button {
-    border-radius: 0;
-}
-
-.accordion-item:first-of-type .accordion-button {
-    border-top-left-radius: calc(0.25rem - 1px);
-    border-top-right-radius: calc(0.25rem - 1px);
-}
-
-.accordion-button:not(.collapsed) {
-    box-shadow: none;
+.accordion-button {
     background: var(--on-color-neutral-900) !important;
-    color: #fff;
 }
-
 
 .on-bg-neutral-900 {
     background: var(--on-color-neutral-900) !important;
+}
+
+.accordion-item {
+    background: var(--on-color-neutral-900) !important;
+    color: #fff;
+    border: none;
+}
+
+.accordion-button:focus {
+    border-color: transparent !important;
+    box-shadow: none !important;
+}
+
+.accordion-button {
+    color: #ffffff !important;
 }
 
 a {
